# exec-doc-rag

./: .gitignore  README.md  pyproject.toml  requirements.txt
app/: app.py
data/eval/: eval_questions.json
reports/: retrieval_eval.md
scripts/: build_index.py  download_docs.py  generate_trades.py  generate_visualizations.py
src/: config.py
src/common/: text_utils.py
src/execution/: anomaly.py  data_generator.py  duckdb_store.py  metrics.py  schemas.py  tool_registry.py
src/rag/: answer_builder.py  chunker.py  downloader.py  embedder.py  evaluation.py  generative_answer.py  indexer.py  parser.py  retriever.py
tests/: test_anomaly.py  test_chunker.py  test_evaluation.py  test_metrics.py  test_retriever.py
